--- a/assignment1.html
+++ b/assignment1.html
@@ -24,5 +24,13 @@
       If you don't know how to make the above mentioned tags, either take a look around on
       the internet, or don't hesitate to ask me!
     -->
+    <h1>Siming Zheng</h1>
+    <ul>
+    	<li>html</li>
+    	<li>css</li>
+    	<li>javascript</li>
+    	<li>jquery</li>
+    	<li>bootstrap</li>
+    </ul>
   </body>
 </html>
